--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,8 +1,5 @@
 #home {
   height: 100vh;
-  background-image: url("../nathan-anderson-L95xDkSSuWw-unsplash.jpg");
-  background-position: bottom;
-  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,52 +7,25 @@
   color: white;
 }
 
-.header-container {
+.header-left {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 60%;
 }
 
 .header-right {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  padding: 20px 40px;
+  align-items: center;
+  width: 40%;
+  position: relative;
 }
 
-.header-left {
-  display: flex;
-  flex-direction: column;
-  padding: 0px 40px;
-}
-
-.header-greeting {
-  color: #f06000;
-  font-weight: 600;
-}
-
-.header-heading {
-  font-size: 70px;
-  font-weight: 600;
-}
-
-.header-text {
-  font-size: 20px;
-}
-
-.header-btn {
-  color: white;
-  letter-spacing: 1.5px;
-  font-size: 11px;
-  background: none;
-  border: 2px solid white;
-  width: 150px;
-  height: 40px;
-  margin-top: 15px;
-  cursor: pointer;
-  transition: all 0.2s;
+.profile-img {
+  height: auto;
+  width: 100%;
+  margin-top: -50px;
 }
 
 .header-btn:hover {
