--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
 .container {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 0 30px;
 }
@@ -21,19 +22,30 @@ body {
   font-weight: 600;
 }
 
-.heading-white {
+.section-heading {
+  font-size: 20px;
+  font-weight: 500;
   color: #fff;
 }
 
 .sub-heading {
-  font-size: 18px;
   font-weight: 500;
+  color: #fff;
+}
+
+.white-span {
+  color: #fff;
+}
+
+.primary-span {
+  color: #00b18a;
 }
 
 .body-text {
   font-size: 14px;
   font-weight: 500;
   color: #8b9198;
+  text-align: center;
 }
 
 .button-primary {
@@ -41,7 +53,7 @@ body {
   color: white;
   width: fit-content;
   font-size: 14px;
-  padding: 12px 15px;
+  padding: 10px 13px;
   font-weight: 500;
   cursor: pointer;
   transition: all 0.2s;
@@ -59,7 +71,7 @@ body {
   background: none;
   width: fit-content;
   font-size: 14px;
-  padding: 12px 15px;
+  padding: 8px 11px;
   font-weight: 500;
   cursor: pointer;
   transition: all 0.2s;
@@ -83,10 +95,20 @@ body {
   .heading {
     font-size: 60px;
   }
-  .sub-heading {
+  .section-heading {
     font-size: 30px;
   }
   .body-text {
     font-size: 16px;
+    text-align: start;
+  }
+  .sub-heading {
+    font-size: 18px;
+  }
+  .button-primary {
+    padding: 12px 15px;
+  }
+  .button-secondary {
+    padding: 10px 13px;
   }
 }
