--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header-right {
@@ -32,6 +33,7 @@
 .profile-img {
   height: auto;
   width: 100%;
+  margin-top: 30px;
 }
 
 .socials {
@@ -61,6 +63,7 @@
   }
   .header-left {
     width: 60%;
+    align-items: flex-start;
   }
   .header-right {
     width: 40%;
